<resources>
    <string name="app_name">Pomodoro</string>
    <string name="default_time_display">00:00:00</string>
    <string name="hintRepsEt">Repetitions</string>
    <string name="startButtonText">Start</string>
    <string name="defaultReps">1</string>
    <string name="complete">Countdown complete</string>
    <string name="Reset">Reset</string>
    <string name="maxPauseTime">30</string>
    <string name="minPauseTime">0</string>
    <string name="minCountdownTime">1</string>
    <string name="maxCountdownTIme">300</string>
</resources>